crates/mdt_cli/tests/snapshots/snapshots__pad_blocks_multi_lang_update_main_py.snap
---
source: crates/mdt_cli/tests/snapshots.rs
expression: main_py
---
# <!-- {=api_docs|trim|linePrefix:"# ":true} -->
# 
# my-tool v2.0.0
# 
# A multi-language tool.
# 
# ## Getting Started
# 
# Use the default configuration to get started quickly.
# 
# <!-- {/api_docs} -->

def configure():
    pass
