crates/mdt_cli/tests/snapshots/snapshots__pad_blocks_rust_check_stale.snap
---
source: crates/mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpwgmOMV
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Stale: block `crate_docs` in lib.rs:1:5
Stale: block `fn_greet` in lib.rs:5:5
Stale: block `crate_docs` in readme.md:3:1

3 consumer block(s) are out of date. Run `mdt update` to fix.
